# Orcamento_KAP

./: .gitignore  CMakeLists.txt  atividades.cpp  atividades.h  atividades.ui  dados_do_cliente.cpp  dados_do_cliente.h  dados_do_cliente.ui  editar_item.cpp  editar_item.h  editar_item.ui  main.cpp  orcamento_editar.cpp  orcamento_editar.h  orcamento_editar.ui  orcamento_novo.cpp  orcamento_novo.h  orcamento_novo.ui  orcamento_ti.cpp  orcamento_ti.h  orcamento_ti.ui  pedido_itens.cpp  pedido_itens.h  pedido_itens.ui  pedidos.cpp  pedidos.h  pedidos.ui  prospect_editar.cpp  prospect_editar.h  prospect_editar.ui  prospect_novo.cpp  prospect_novo.h  prospect_novo.ui  prospect_ti.cpp  prospect_ti.h  prospect_ti.ui  struct_comum.h
.github/workflows/: build-linux.yml
